--- a/views/search.html
+++ b/views/search.html
@@ -22,20 +22,22 @@
     </ul>
 
     <div class="products-list-container clear">
-        <div class="left-arrow"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-left-arrow"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow" ng-show="navigationInfo.startIndex !== 0"><i class="fa fa-chevron-right"></i></div>
         <div class="products-list-content" ng-show="productsLine1.length">
-            <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection"></products-list-items>
-            <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection"></products-list-items>
+            <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
+            <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
         </div>
-        <div class="left-arrow"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-left-arrow"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow" ng-show="navigationInfo.startIndex !== 0"><i class="fa fa-chevron-right"></i></div>
     </div>
     
-    <!--<products-list-navigation step="{{step}}" products-list-length="{{productsLine1.length}}" navigation-info="navigationInfo"></products-list-navigation>-->
+    <products-list-navigation step="{{step}}" products-list-length="{{productsLine1.length}}" navigation-info="navigationInfo"></products-list-navigation>
 
 </div>
 
-<!--<div ng-show="category.products.length" ng-swipe-right="navigateNext()" ng-swipe-left="navigateBack()">
+<div ng-show="category.products.length" ng-swipe-right="navigateNext()" ng-swipe-left="navigateBack()">
      <h4 class="products-list-name">{{category.name}}</h4>
     <products-list-items products="currentProductsPage" show-product="showProduct(product)"></products-list-items>
     <products-list-navigation step="{{step}}" products-list-length="{{category.products.length}}" navigation-info="navigationInfo"></products-list-navigation>
-</div>-->
+</div>
