--- a/views/comparison.html
+++ b/views/comparison.html
@@ -1,6 +1,6 @@
 ﻿<div class="comparison-page">
     
-    <div class="comparison-products" ng-show="!isEmpty()">
+    <div class="comparison-products">
         
         <product-pane product="product" is-compared="true" ng-repeat="product in productsToCompare"></product-pane>
         <div class="add-product-to-compare" ng-click="addPruduct()" ng-show="!isFull()"><i class="fa fa-plus-circle"></i></div>
@@ -10,7 +10,7 @@
         <div class="table-wrapper" ng-style="{'width': (150*category.features.length) + 'px'}">
             <table class="table-head">
 
-                <thead>
+                <thead ng-show="!isEmpty()">
                     <tr>
                         <th ng-repeat="feature in category.features">{{feature.header}}</th>
                     </tr>
