--- a/app/css/app.css
+++ b/app/css/app.css
@@ -324,6 +324,7 @@ input[type=submit].search-button
     height: 255px;
     position: relative;
     right: 2%;
+    clear: both;
 }
 
 .product
@@ -697,14 +698,9 @@ div, i
 
 .add-product-to-compare
 {
-    
-    border: solid 1px #ccc;
-    background-color: #ddd;
-    color: #ccc;
-    font-size: 30pt;
-    box-shadow: 0 1px 1px 2px #ddd;
+    color: #555;
+    font-size: 45pt;
     line-height: 100px;
-    width: 110px;
 }
 
 .comparison-products
