--- a/app/css/app.css
+++ b/app/css/app.css
@@ -93,8 +93,7 @@ header
 {
     position: absolute;
     top: 0;
-    left: 20px;
-    text-align: center;
+    left: 10px;
 }
 
 .category
@@ -113,7 +112,7 @@ header
     border-radius: 4px 4px 0 0;
     margin-top: 10px;
     line-height: 50px;
-    width: 106px;
+    width: 115px;
 }
 
     .menu-is-open .category
@@ -123,7 +122,7 @@ header
 
 .right-buffer
 {
-    left: 10px;
+    left: 0;
 }
 
 .hello_user .left-buffer
@@ -142,8 +141,8 @@ header
 {
     position: relative;
     display: block;
-    margin-left: 200px;
-    margin-right: 300px;
+    margin-left: 250px;
+    margin-right: 350px;
     height: 100%;
     padding-top: 15px;
 }
@@ -889,7 +888,7 @@ div, i
 
 .ancestor, .parent, .main-bread-cramb a
 {
-    color: rgb(6, 181, 240);
+    color: #333;
 }
 
     .main-bread-cramb a:hover
@@ -936,9 +935,6 @@ div, i
     right: 0;
     top: 0;
     bottom: 0;
-    margin: 25%;
-    height: 50%;
-    width: 50%;
     background-image: url('../img/checkbox_unchecked.png');
     background-repeat: no-repeat;
     background-position: center;
@@ -986,4 +982,8 @@ div, i
 {
     font-size: 15pt;
     font-weight: bold;
+}
+
+.popover {
+    margin-left: -77px;
 }
