--- a/views/search.html
+++ b/views/search.html
@@ -23,14 +23,14 @@
     </ul>
 
     <div class="products-list-container clear" ng-swipe-right="navigateNext()" ng-swipe-left="navigateBack()">
-        <div class="search-left-arrow" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
-        <div class="search-right-arrow" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
+        <div class="search-left-arrow top" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow top" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
         <div class="products-list-content" ng-show="productsLine1.length">
             <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
             <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
         </div>
-        <div class="search-left-arrow" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
-        <div class="search-right-arrow" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
+        <div class="search-left-arrow bottom" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow bottom" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
     </div>
 
     <products-list-navigation></products-list-navigation>
