--- a/views/search.html
+++ b/views/search.html
@@ -31,7 +31,11 @@
     </div>
 
 
-    <div class="products-list-container clear" ng-swipe-right="navigateNext()" ng-swipe-left="navigateBack()">
+    <div class="products-list-container clear"
+
+         ng-swipe-right="navigateNext()"
+         ng-swipe-left="navigateBack()"
+         ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
         <div class="search-left-arrow top" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
         <div class="search-right-arrow top" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
         <div class="products-list-content" ng-show="productsLine1.length">
