--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,4 +1,8 @@
-﻿body
+﻿html, body {
+    height: 100%;
+}
+
+body
 {
     direction: rtl;
     font-size: 12pt;
@@ -864,6 +868,10 @@ div, i
 .popover
 {
     margin-top: 4px;
+    max-height: 100%;
+    max-height: 70%;
+overflow: hidden; 
+ overflow-y: auto; 
 }
 
 .popover-title
