--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,4 +1,5 @@
-﻿html, body {
+﻿html, body
+{
     height: 100%;
 }
 
@@ -869,9 +870,7 @@ div, i
 {
     margin-top: 4px;
     max-height: 100%;
-    max-height: 70%;
-overflow: hidden; 
- overflow-y: auto; 
+    
 }
 
 .popover-title
@@ -885,6 +884,9 @@ overflow: hidden;
 {
     padding: 0;
     border: solid 1px #444;
+    max-height: 70%;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 .popover.bottom .arrow
@@ -896,7 +898,6 @@ overflow: hidden;
 {
     padding: 10px 0;
     position: relative;
-
 }
 
 .menu .nav-tabs, .menu .nav-tabs .active a, .menu .nav-tabs .active a:hover, .menu .nav-tabs li a
@@ -1028,11 +1029,13 @@ overflow: hidden;
     font-size: 14pt;
 }
 
-.search-page .compare-link {
+.search-page .compare-link
+{
     margin-top: 5px;
 }
 
-.search-page .go-to-comparison {
+.search-page .go-to-comparison
+{
     margin-top: 35px;
 }
 
@@ -1073,11 +1076,6 @@ overflow: hidden;
     position: absolute;
     right: 0;
 }
-
-/*.popover
-{
-    margin-left: -77px;
-}*/
 
 .search-term
 {
