--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1086,3 +1086,16 @@ div, i
     font-size: 13pt;
     padding-top: 10px;
 }
+
+
+
+.loading {
+    position: absolute;
+    background-image: url(../img/loading.gif);
+    background-position: center center;
+    background-repeat: no-repeat;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
